add my running course

--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
                     </tbody>
                 </table>
             </nav>
-            <nav>
+            <nav class="details">
                 <h3>Education:</h3>
-                <li>Khulna University,Khulna</li>
-                <li>Navy College,Dhaka</li>
-                <audio src=""></audio>
+                <p>Khulna University,Khulna</p><br>
+                <p>Navy College,Dhaka</p>
             </nav>
-
-            <nav>
+            <nav class="details">
+                <h3>Running Course:</h3>
+                <p>Software Quality and Assurance</p>
+                <p>Full Stack Web-Devolopment</p>
+            </nav>
+            <nav class="details">
                 <h3>Contact Information</h3>
-                    <li>sojunkomer123@gmail.com</li>
-                    <li>01794046782</li>
+                    <p>Gmail : sojunkomer123@gmail.com</p><br>
+                    <p>Phone : 01794046782</p>
             </nav>
             <nav id="social">
                 <h3>Social Media:</h3>
