use a public oneline url for picture

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <h1>Sojun Chandra</h1>
                 <!-- here into 'alt' if write anything when the image not found then this text show -->
-                <img src="/sojun.jpg" width="200px" height="200px" alt="Image">
+                <img src="https://i.postimg.cc/J02Hy0Dn/scs.jpg" width="200px" height="200px" alt="Image">
             </nav>
             <nav class="info">
                 <h3>About:</h3>
@@ -68,7 +68,7 @@
                         </tr>
                         <tr>
                             <td>CSS</td>
-                            <td>★★☆☆☆</td>
+                            <td>★★★☆☆</td>
                         </tr>
                     </tbody>
                 </table>
