add keyword for finding my website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- for supporting unicode, bangla and emogi and so on. -->
     <meta charset="UTF-8">
+    <!-- different types of device set autometically its width. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- supporting older version of website. -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- those keyword browser find that website. -->
+    <meta name="keywords" content="sojun15, sojun chandra, 210215">
     <title>Protfolio</title>
     <link rel="icon" href="port.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
@@ -49,10 +55,10 @@
             </nav>
             <section id="skills">
                 <h3>Skill Language:</h3>
-                <table border="2" class="center">
+                <table border="2" class="center" cellspacing="0">
                     <thead>
                         <th>Language</th>
-                        <th>Lavel</th>
+                        <th>knowledge</th>
                     </thead>
                     <tbody>
                         <tr>
