add simple animation in my name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
             
             </section>
             <header>
-                <h1>Sojun Chandra</h1>
+                <div class="parent_animation">
+                    <div class="child_animation">
+                        <h1>Sojun Chandra</h1>
+                    </div>
+                </div>
+                
                 <p>Undergraduate Student</p>
             </header>
             <nav>               
